# src/domain/user/post/dto/create-post.dto.ts
@@ -22,4 +22,12 @@ export class CreatePostDto {
   @IsArray()
   @IsString({ each: true })
   mediaUrls?: string[];
+
+  @ApiProperty({
+    example: '123e4567-e89b-12d3-a456-426614174000',
+    description: 'Community ID',
+  })
+  @IsString()
+  @IsNotEmpty()
+  communityId: string;
 }
