# src/domain/user/post/dto/post-detail.dto.ts
@@ -1,0 +1,3 @@
+import { PostDto } from './post.dto';
+
+export class PostDetailDto extends PostDto {}
